--- a/SorveteriaZequinha/SorveteriaZequinha.csproj
+++ b/SorveteriaZequinha/SorveteriaZequinha.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmMenuPrincipal.Designer.cs">
       <DependentUpon>frmMenuPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPesquisarFuncionarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPesquisarFuncionarios.Designer.cs">
+      <DependentUpon>frmPesquisarFuncionarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSobreNos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMenuPrincipal.resx">
       <DependentUpon>frmMenuPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPesquisarFuncionarios.resx">
+      <DependentUpon>frmPesquisarFuncionarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSplash.resx">
       <DependentUpon>frmSplash.cs</DependentUpon>
